a2/lambdaP := <longLambdaP> | <shortLambdaP.bnf
lambdaP := <longLambdaP> | <shortLambdaP>
longLambdaP := <lambdaExpression>
lambdaExpression := <lambdaexpression> | <lettersBracket> | <letters>
shortLambdaP := <short>
short := <shortDos> | <short> | <lettersBracket> | <letters> | <shortAux>
shortAux := <letters> <lettersBracket>
shortDos := <short>
lettersBracket := <letters> 
letters := [a - z]
lambda := "λ" | "\\"
